<resources>
    <string name="app_name">Belajar Kotlin1</string>

    <!-- String for buttons and fragments -->
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="pertemuan_3_intent">Pertemuan 3 - Intent</string>
    <string name="pertemuan_4_intent">Pertemuan 4 - Intent</string>
    <string name="pertemuan_5_fragment">Pertemuan 5 - Fragment</string>

    <!-- Strings for layouts -->
    <string name="linear_layout_example">Linear Layout Example</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="relative_layout_example">Relative Layout Example</string>
    <string name="constraint_layout_example">This is a ConstraintLayout example</string>

    <!-- String for submit button -->
    <string name="submit">Submit</string>

    <!-- Additional string for accessibility -->
    <string name="image_description">App icon</string>
    <string name="belajar_layout_android">Belajar Layout Android</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>

    <!-- Add this missing string -->
    <string name="linear_layout_activity">Linear Layout Activity</string>

    <!-- If you need these strings, make sure they have values -->
    <string name="relative_layout_activity">Relative Layout Activity</string>
    <string name="constraint_layout_activity">Constraint Layout Activity</string>
    <string name="go_to_intent_activity">Go to Intent Activity</string>
    <string name="go_to_pertemuan_4">Go to Pertemuan 4</string>
    <string name="go_to_pertemuan_5_fragment">Go to Pertemuan 5 Fragment</string>
    <string name="go_to_pertemuan_6_layout">Go to Pertemuan 6 Layout</string>
    <string name="go_to_pertemuan_7_dialog">Go to Pertemuan 7 Dialog</string>
    <string name="go_to_weather_app">Go to Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="go_to_recipe_finder">Go to Recipe Finder</string>
    <string name="kimi_maulana">Kimi_Maulana</string>
    <string name="_20_october_2024_13_08_pm">20 October 2024, 13:08 PM</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="_26_c">26°C</string>
    <string name="min_temp_05_05_am">Min Temp: 05:05 AM</string>
    <string name="max_temp_05_05_pm">Max Temp: 05:05 PM</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong.</string>
    <string name="Jakarta" />
    <string name="todo">TODO</string>
</resources>