<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- TextView untuk judul -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/belajar_layout_android"
        android:textSize="15sp"
        android:textStyle="bold" />

    <!-- Linear Layout untuk Button Linear Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_layout" />
    </LinearLayout>

    <!-- Linear Layout untuk Button Relative Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_relativelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_layout" />
    </LinearLayout>

    <!-- Linear Layout untuk Button Constraint Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_constraintlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constraint_layout" />
    </LinearLayout>
</LinearLayout>